nginx: factor out openssl into an own task

--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -152,6 +152,11 @@
       tags:
         - nginx
 
+    - name: Nginx openssl
+      ansible.builtin.import_tasks: nginx-openssl.yaml
+      tags:
+        - nginx-openssl
+
     - name: Nginx config
       ansible.builtin.import_tasks: nginx-config.yaml
       tags:
