--- a/playbooks/roles/setup_snowflake/tasks/_snowflake-setup.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/_snowflake-setup.yaml
@@ -33,7 +33,7 @@
     remote_src: true
   notify: Restart Snowflake
 
-- name: Add systemd unit {{ item.name }}
+- name: Add/Change systemd unit {{ item.name }}
   ansible.builtin.template:
     src: snowflake-proxy.service.j2
     dest: "/etc/systemd/system/{{ item.name }}.service"
