--- a/playbooks/roles/setup_snowflake/tasks/tools.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/tools.yaml
@@ -1,6 +1,6 @@
 ---
-- name: Install/Update Go for Snowflake build
+- name: Install/Update toolchain
   ansible.builtin.apt:
     default_release: "{{ ansible_facts.distribution_release }}-backports"
     name:
-      - golang-go
+      - golang
