app: flush handlers so that the info role works

--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -87,3 +87,6 @@
       ansible.builtin.import_tasks: config.yaml
       tags:
         - config
+
+    - name: Flush handlers
+      ansible.builtin.meta: flush_handlers
