--- a/playbooks/roles/setup_snowflake/tasks/main.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/main.yaml
@@ -46,3 +46,6 @@
       ansible.builtin.import_tasks: config.yaml
       tags:
         - config
+
+    - name: Flush handlers
+      ansible.builtin.meta: flush_handlers
