fetch: flat:true

--- a/playbooks/roles/info_tor/tasks/tor-keys-backup.yaml
+++ b/playbooks/roles/info_tor/tasks/tor-keys-backup.yaml
@@ -12,6 +12,7 @@
   ansible.builtin.fetch:
     src: "/var/lib/tor/keys/{{ item }}"
     dest: "{{ infodir }}/tor-keys/{{ inventory_hostname }}/"
+    flat: true
   loop:
     - ed25519_master_id_public_key
     - ed25519_master_id_secret_key
