--- a/playbooks/roles/info_healthy/tasks/_dmesg.yaml
+++ b/playbooks/roles/info_healthy/tasks/_dmesg.yaml
@@ -3,14 +3,14 @@
   changed_when: false
   ansible.builtin.command:
     cmd: dmesg
-  register: _result
+  register: __dmesg
 
 - name: File dmesg
   delegate_to: localhost
   throttle: "{{ concurrent_local_jobs }}"
   ansible.builtin.copy:
-    dest: "{{ infodir }}/dmesg/{{ inventory_hostname }}.{{ now(utc=true, fmt='%Y-%m-%d %H:%M:%S') }}Z.txt"
-    content: "{{ _result.stdout }}"
+    dest: "{{ infodir }}/dmesg/{{ inventory_hostname }}.{{ now(utc=true, fmt='%Y-%m-%d_%H:%M:%S') }}Z.txt"
+    content: "{{ __dmesg.stdout }}"
 
 - name: File dmesg info
   delegate_to: localhost
@@ -22,4 +22,4 @@
       {{ ansible_facts.architecture }}
       {{ ansible_facts.processor[1] }}
 
-    dest: "{{ infodir }}/dmesg/{{ inventory_hostname }}.{{ now(utc=true, fmt='%Y-%m-%d %H:%M:%S') }}Z.info.txt"
+    dest: "{{ infodir }}/dmesg/{{ inventory_hostname }}.{{ now(utc=true, fmt='%Y-%m-%d_%H:%M:%S') }}Z.info.txt"
