notify unheakthy handler for coredumps and traces

--- a/playbooks/roles/info_healthy/tasks/_coredump.yaml
+++ b/playbooks/roles/info_healthy/tasks/_coredump.yaml
@@ -24,6 +24,7 @@
           eu-stack --core /tmp/core
           rm /tmp/core
       register: __info
+      notify: Not Healthy
 
     - name: File coredump info
       delegate_to: localhost
