info healthy: flush handlers at the end

--- a/playbooks/roles/info_healthy/tasks/main.yaml
+++ b/playbooks/roles/info_healthy/tasks/main.yaml
@@ -54,3 +54,6 @@
       ansible.builtin.import_tasks: trace.yaml
       tags:
         - trace
+
+    - name: Flush handlers
+      ansible.builtin.meta: flush_handlers
