--- a/playbooks/roles/info_tor/defaults/main.yaml
+++ b/playbooks/roles/info_tor/defaults/main.yaml
@@ -10,3 +10,5 @@ _fingerprint_hashed: ""
 log_err: /var/log/tor/err.log
 log_notice: /var/log/tor/notice.log
 log_warn: /var/log/tor/warn.log
+
+tor_keys_backup: false
