--- a/playbooks/roles/snapshot/tasks/snapshot.yaml
+++ b/playbooks/roles/snapshot/tasks/snapshot.yaml
@@ -13,18 +13,18 @@
             --type snapshot --description='{{ snapshot_description }}' {{ inventory_hostname }}
 
     - name: Delete outdated
-      changed_when: _result.rc == 0
+      changed_when: true
       failed_when: false
       ansible.builtin.shell:
         cmd: |-
           hcloud --quiet image list --type snapshot --output noheader --output columns=id,description |
-            grep -e ' {{ snapshot_description }}$' |
-            sort -r |
+            grep -e " {{ snapshot_description }}[ ]*$" |
+            sort -rn |
             awk 'x[$2]++ { print $1 }' |
-            xargs -r hcloud --poll-interval 5s image delete >/dev/null
+            xargs -r hcloud --quiet --poll-interval 5s image delete
       register: _result
 
-    - name: Debug deletion
+    - name: Delete failure
       when: _result.rc != 0
       changed_when: true
       ansible.builtin.debug:
