--- a/playbooks/roles/lib/_git.yaml
+++ b/playbooks/roles/lib/_git.yaml
@@ -22,6 +22,7 @@
             version: "{{ _git_version }}"
 
         - name: Git update "{{ _repo_dir }}"
+          when: __repo.before != None
           ansible.builtin.git:
             version: "{{ _git_version }}"
             force: true
