--- a/playbooks/roles/delete/tasks/delete.yaml
+++ b/playbooks/roles/delete/tasks/delete.yaml
@@ -5,15 +5,14 @@
 - name: Instance
   delegate_to: localhost
   throttle: "{{ concurrent_local_jobs }}"
-  changed_when: _hcloud.rc == 0
+  changed_when: true
   environment:
     PATH: "{{ lookup('env', 'PATH') }}:{{ lookup('env', 'HOME') }}/bin"
   ansible.builtin.command:
     cmd: >-
       hcloud --quiet --poll-interval 5s server delete {{ inventory_hostname }}
-  register: _hcloud
 
-- name: SSHd known key
+- name: SSH known key
   delegate_to: localhost
   throttle: 1
   changed_when: _result.stdout is not search('not found in')
