--- a/playbooks/roles/info_tor/tasks/log-warn.yaml
+++ b/playbooks/roles/info_tor/tasks/log-warn.yaml
@@ -1,6 +1,8 @@
 ---
 - name: Check warn log
   changed_when: false
+  vars:
+    log_warn: /var/log/tor/warn.log
   ansible.builtin.shell:
     cmd: |-
       grep -h -v \
@@ -9,7 +11,7 @@
         -e 'The IPv4 ORPort address 127.0.0.1 does not match' \
         -e 'Unrecognized BridgeDistribution value' \
          {{ log_warn }}.1 {{ log_warn }} 2>/dev/null |
-        tail -n {{ log_lines }}
+        tail -n 10
   register: _result
 
 - name: Results of warn log
