reduce forks to 32 due to CPU contraints

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
 inventory = ./inventory
 
-# limited rather by upstream bandwidth than by cpu
-forks = 64
+# limited by tx and localhost CPU
+forks = 32
 pipelining = true
 strategy = free
 
