--- a/playbooks/roles/setup_tor/tasks/tools.yaml
+++ b/playbooks/roles/setup_tor/tasks/tools.yaml
@@ -27,4 +27,4 @@
   ansible.builtin.apt:
     default_release: "{{ ansible_facts.distribution_release }}-backports"
     name:
-      - golang
+      - golang-go
